@@ -1685,6 +1685,8 @@ dongle    = false
 #                  printer : Send to an actual printer in Windows (Print dialog will appear)
 #   multipage: Adds all pages to one PostScript file or printer job until CTRL-F2 is pressed.
 #     docpath: The path where the output files are stored.
+#    openwith: Start the specified program to open the output file.
+#   openerror: Start the specified program to open the output file if an error had occurred.
 #     timeout: (in milliseconds) if nonzero: the time the page will be ejected automatically after when no more data arrives at the printer.
 printer     = true
 dpi         = 360
@@ -1693,6 +1695,8 @@ height      = 110
 printoutput = png
 multipage   = false
 docpath     = .
+openwith    = 
+openerror   = 
 timeout     = 0
 
 [dos]
